# dx11renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Utils.cpp  aces_tonemapper.fx  aces_tonemapper_simple.fx  constants.hpp  depth_map_shader.fx  gltf_utils.cpp  gltf_utils.hpp  irenderer.hpp  irenderingcontext.hpp  iscene.hpp  log.cpp  log.hpp  main.cpp  mikktspace.cpp  mikktspace.hpp  mikktspace_weldmesh.cpp  post_shaders.fx  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_load.cpp  scene_shaders.fx  scene_utils.cpp  scene_utils.hpp  shaders.fx  tangent_calculator.cpp  tangent_calculator.hpp  utils.cpp  utils.hpp
Design/: Rendering passes.graphml  renderer vs scene.graphml
Doc/: screenshot1.mkv
Doc/Const material parameter/: 0 Orig.xcf  1 Mult in shader.xcf
Doc/Layer refraction approximation/: 0 All - 0 Orig - Brown.xcf  0 All - 0 Orig.xcf  0 All - 1 Smooth approx - Brown.xcf  0 All - 2 Rough approx - Brown.xcf  0 All - 2 Rough approx.xcf  1 Directional - 0 Orig - Brown.xcf  1 Directional - 0 Orig.xcf  1 Directional - 1 Smooth approx - Brown.xcf  1 Directional - 1 Smooth approx.xcf  1 Directional - 2 Rough approx - Brown.xcf  2 Points - 0 Orig - Brown.xcf  2 Points - 0 Orig.xcf  2 Points - 1 Smooth approx - Brown.xcf  2 Points - 1 Smooth approx.xcf  2 Points - 2 Rough approx - Brown.xcf  2 Points - 2 Rough approx.xcf  3 Ambient - 0 Orig - Brown.xcf  3 Ambient - 0 Orig.xcf  3 Ambient - 1 Smooth approx - Brown.xcf  3 Ambient - 2 Rough approx - Black.xcf  3 Ambient - 2 Rough approx - Brown.xcf  Helmet - 0 Orig.xcf  Helmet - 2 Rough approx.xcf
Doc/Linear workflow/: 0.1.1 - 0-0.xcf  0.1.1 - 1-1.xcf  0.1.2 - 0-0.xcf  0.1.2 - 1-1.xcf  0.2 - 0-0.xcf  0.2 - 1-1.xcf  0.3 - 0-0.xcf  0.3 - 1-1.xcf  0.4 - 0-0.xcf  0.4 - 1-1.xcf  0.5 - 0-0.xcf  0.5 - 1-1.xcf  1.1 - 0-0.xcf  1.1 - 1-1.xcf  1.4 - 0-0.xcf  1.4 - 1-1.xcf  2 - 0-0.xcf  2 - 1-1.xcf  4 - 0-0.xcf  4 - 0-1.xcf  4 - 1-0.xcf  4 - 1-1.xcf  5 - 0-0.xcf  5 - 1-0.xcf  5 - 1-1.xcf
Doc/Metalness/: 1.Frames.xcf  1.Naive.xcf  3.xcf  4.xcf  5.Naive.xcf  5.RoughAprx.xcf  6.Frames.xcf
Doc/Metalness screenshots/: 1.Frames.xcf  1.Naive.xcf  1.RoughAprx.xcf  1.xcf  2.1.xcf  2.2.xcf  2.Naive.xcf  2.RoughAprx.xcf  5.xcf  6.Frames.xcf  6.Naive.xcf  6.RoughAprx.xcf  6.xcf
Doc/Normal Mapping/: 1 Interpolated normal.xcf  1 Normal (object space).xcf  1 Normal 5 Damaged Helmet.xcf  2 Tangent 5 Damaged Helmet.xcf  2 Tangent.xcf  3 Bitangent.xcf  3 Tangent (object space).xcf  3 Tangent.xcf  4 Normal Map.xcf  5 Modified Normal 5 Damaged Helmet.xcf  5 Modified Normal.xcf  6 Result 10-1 Jacket.xcf  6 Result 10-2 Jacket.xcf  6 Result 11-1 Skull.xcf  6 Result 11-2 Skull.xcf  6 Result 5-1 Damaged Helmet.xcf  6 Result 5-2 Damaged Helmet.xcf  6 Result 6-1 Helmet.xcf  6 Result 7-1 Spot Mini.xcf  6 Result 8-1 Weltron Radio.xcf  6-2 Helmet (modified normal).xcf  7-2 Spot Mini.xcf  8-2 Weltron Radio.xcf  9-1 Rocket.xcf  9-2 Rocket.xcf
Doc/Smooth refraction approximation/: 0 All - 1 Layer 2 VL.xcf  0 All - 1 Layers.xcf  1 Directional - 1 Layer 1 V.xcf  1 Directional - 2 Rough approx.xcf  2 Points - 1 Layer 1 V.xcf  2 Points - 2 Rough approx - Brown.xcf  3 Ambient - 1 Layer 2 VL.xcf  3 Ambient - 1 Layers.xcf  3 Ambient - 1 Smooth approx 2 VL.xcf  3 Ambient - 2 Rough approx.xcf  Helmet - 1 Layer 1 V.xcf  Helmet - 1 Layer 2 VL.xcf  Helmet - 1 Smooth approx 2 VL.xcf  Helmet - 2 Rough.xcf
Doc/Textures - normal, occlusion, emission/: 1.0.xcf  1.1.xcf  1.2.xcf  1.3.xcf  1.xcf  2.0.xcf  2.1.xcf  2.2.xcf  2.xcf  3.0.xcf  3.1.xcf  3.2.xcf  3.xcf  4.0.xcf  4.1.xcf  4.2.xcf  4.3.xcf  4.xcf  5.0.xcf  5.1.xcf  5.2.xcf  5.xcf
Doc/Tonemapping/: 2-0.xcf  2-1.xcf  2-2.xcf  2.xcf  3.xcf  4.xcf  5.xcf
Libs/tinygltf-2.2.0/: loader_example.cc  loader_example.h  tiny_gltf.h
Scenes/Debugging/GradientBox/: GradientBox.gltf
Scenes/Debugging/MetalRoughSpheresNoTextures/: MetalRoughSpheresNoTextures black.gltf  MetalRoughSpheresNoTextures brown.gltf  MetalRoughSpheresNoTextures white.gltf  MetalRoughSpheresNoTextures yellow.gltf  MetalRoughSpheresNoTextures.gltf
Scenes/Sketchfab/ArneDC - Prinzsound SM8 - Weltron 2001 Spaceball Radio/: Readme.txt
Scenes/Sketchfab/ArneDC/Prinzsound SM8 - Weltron 2001 Spaceball Radio/: scene.gltf
Scenes/Sketchfab/Felipe Oliveira Gall - Hardhead/: Readme.txt  scene.gltf
Scenes/Sketchfab/Greg McKechnie/: Readme.txt
Scenes/Sketchfab/Greg McKechnie/Spot Mini (Rigged)/: Readme.txt
Scenes/Sketchfab/Ivan Norman - Low-poly truck (car Drifter)/: Readme.txt
Scenes/Sketchfab/Mario_Wallner - Mitterkirchen - Tisch/: Readme.txt  license.txt  scene.gltf
Scenes/Sketchfab/Mohamed Fsili - 3D bulldozer/: Readme.txt  license.txt  scene.gltf
Scenes/Sketchfab/PolyDucky/Tesla Cybertruck/: Readme.txt  scene.gltf
Scenes/Sketchfab/Teliri/Rock Jacket (mid-poly)/: Readme.txt
Scenes/Sketchfab/TuppsM - The Rocket/: scene.gltf
Scenes/Sketchfab/_Sef_ - Robo_V1/: scene.gltf
Scenes/Sketchfab/arn204 - The Mandalorian's Helmet/: Readme.txt  scene.gltf
Scenes/Sketchfab/hunter333d - Nintendo Game Boy Classic/: Readme.txt
Scenes/Sketchfab/re1monsen - SciFi Stool/: Readme.txt  license.txt  scene.gltf
Textures/Debugging/: VerticalSineWaves.xcf
Textures/www.solarsystemscope.com/: 2k_earth_specular_map.tif  licence.txt
(+6 files in other folders)
